plugins/kotlin/idea/tests/testData/multiplatform/sealedInheritorsInComplexModuleStructure1/intermediate/platform.kt
package foo

actual sealed class <!LINE_MARKER("descr='Has declaration in common module'"), LINE_MARKER("descr='Is subclassed by SealedWithPlatformActuals [main] SimpleShared  Click or press ... to navigate'")!>SealedWithSharedActual<!>
class SimpleShared : SealedWithPlatformActuals<!NO_CONSTRUCTOR!>()<!>
